# Monkey

./: .gitignore  CMakeLists.txt
include/crypto/encryption/: IEncryption.h
include/crypto/keyderivation/: IKeyDerivation.h  KeyDerivationAlgorithm.h
include/crypto/keymanagement/: IKeyManagement.h
src/: CMakeLists.txt  main.cpp
src/AddLib/: Addo.cpp  Addo.h  CMakeLists.txt
src/crypto/encryption/: AESEncryption.cpp  AESEncryption.h  CMakeLists.txt
src/crypto/keyderivation/: Argon2KeyDerivation.cpp  Argon2KeyDerivation.h  CMakeLists.txt  KeyDerivationBuilder.cpp  KeyDerivationBuilder.h  PBKDF2KeyDerivation.cpp  PBKDF2KeyDerivation.h
src/crypto/keymanagement/: CMakeLists.txt  FileKeyManagement.cpp  FileKeyManagement.h
tests/: CMakeLists.txt  test_main.cpp
tests/crypto/: CMakeLists.txt
tests/crypto/encryption/: CMakeLists.txt  test_encryption.cpp
tests/crypto/keyderivation/: CMakeLists.txt  test_keyderivation.cpp
tests/crypto/keymanagement/: CMakeLists.txt  test_keymanagement.cpp
